ajustes de layout

--- a/styles.css
+++ b/styles.css
@@ -17,8 +17,8 @@
 }
 
 .container {
-  width: 100vw;
-  height: 100vh;
+  width: 100%;
+  height: 100%;
   max-width: 1900px;
   background-color: var(--fundo);
 }
